서비스 소개 기능 추가
 - 서비스 소개 기능을 각 서비스별로 설명할 수 있도록 만들었습니다.

--- a/views/__Explanation.ejs
+++ b/views/__Explanation.ejs
@@ -12,13 +12,15 @@
     <div class="ex_cont">
         <div>
             <h2 id="ex_title">SKHU ROAD</h2>
-            <p id="ex_maintext">길찾기: 검색한 장소로 이동할 수 있는 수단을 보여줍니다.<br>
-                중간지점: 검색한 두 장소의 중간지점을 찾아줍니다.<br>
-                지하철: 지하철 역의 지연시간을 알려줍니다.</p>
-            <div class="btn_group">
-                <div id="ex_back_btn" class="ex_button"><< Back</div>
-                <div id="ex_next_btn" class="ex_button">Next >></div>
-            </div>
+            <p id="ex_maintext">
+                길찾기: 검색한 장소로 이동할 수 있는 수단을 보여줍니다.<br />
+                중간지점: 검색한 두 장소의 중간지점을 찾아줍니다.<br />
+                지하철: 지하철 역의 지연시간을 알려줍니다.
+            </p>
+        </div>
+        <div class="btn_group">
+            <div id="ex_back_btn" class="ex_button"><< Back</div>
+            <div id="ex_next_btn" class="ex_button">Next >></div>
         </div>
     </div>
 </div>
