--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -11,7 +11,7 @@
         <article class="subway-con">
             <div style="text-align: left; padding: 10px 22px">
                 <form style="display: inline-block" method="post">
-                    <select id="SubwayLine" style="font-size: 20px" name="subwayLine">
+                    <select class="Line_no" id="SubwayLine" style="font-size: 20px" name="subwayLine">
                         <option value="1호선">1호선</option>
                         <option value="2호선">2호선</option>
                         <option value="3호선">3호선</option>
@@ -30,7 +30,7 @@
                     </select>
                 </form>
                 <form style="display: inline-block">
-                    <select id="updnLine" style="font-size: 20px" name="updnLine">
+                    <select class="updnLine_no" id="updnLine" style="font-size: 20px" name="updnLine">
                         <option value="1">상행</option>
                         <option value="2">하행</option>
                     </select>
@@ -49,7 +49,7 @@
         </div>
         <div class="subway_text_group"></div>
     </div>
-    <br>
+    <br />
     <!-- <div class="tg">
         <img src="smap_sg_all.png" id="image-display" class="photo" width="100%" height="100%">
     </div>
