--- a/static/css/Explanation.css
+++ b/static/css/Explanation.css
@@ -54,6 +54,7 @@
 .help_select {
     animation: blink 1s infinite alternate;
     z-index: 100;
+    position: relative;
 }
 
 @keyframes blink {
@@ -74,6 +75,10 @@
     display: flex;
     gap: 10px;
     text-align: center;
+    position: absolute;
+    bottom: -10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .ex_button {
     flex: 1;
