--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -68,9 +68,9 @@
         <%- include('./__Info') %> <%- include('./__Explanation') %>
         <div id="map" style="z-index: 0"></div>
     </body>
-    <div class="tg" id="imageContainer" style="display: none;">
-        <img src="smap_sg_all.png" id="image-display" class="photo">
+    <div class="tg" id="imageContainer" style="display: none; z-index: 0">
+        <img src="smap_sg_all.png" id="image-display" class="photo" />
     </div>
-        <!-- <img src="smap_sg_all.png" id="image-display" width="100%" height="100%"> -->
+    <!-- <img src="smap_sg_all.png" id="image-display" width="100%" height="100%"> -->
     <script src="Main.js"></script>
 </html>
