서비스 소개 기능 추가

--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -68,8 +68,8 @@
         <%- include('./__Info') %> <%- include('./__Explanation') %>
         <div id="map" style="z-index: 0"></div>
     </body>
-    <div class="tg" id="imageContainer" style="display: none;">
-        <img src="smap_sg_all.png" id="image-display" class="photo">
+    <div class="tg" id="imageContainer" style="display: none; z-index: 0">
+        <img src="smap_sg_all.png" id="image-display" class="photo" />
     </div>
 
     <script src="Main.js"></script>
