--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="Main.css" />
         <link rel="stylesheet" href="help.css" />
-        <link rel="stylesheet" href="explanation.css" />
+        <link rel="stylesheet" href="Explanation.css" />
         <link rel="stylesheet" href="Subway.css" />
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsmoFLqupsLIZtJGrerrEuNkrnW_8NnCI&libraries=places"></script>
         <title>SKHU ROAD</title>
