--- a/views/__Info.ejs
+++ b/views/__Info.ejs
@@ -27,7 +27,7 @@
                     <div class="img_cont">
                         <h2 class="name_text">김현우</h2>
                         <h3>backend</h3>
-                        <p>서버 라우터 제작, 중간지점 서비스 개발</p>
+                        <p>서버 라우터 제작, 길찾기, 중간지점 서비스 개발</p>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                     <div class="img_cont">
                         <h2 class="name_text">박동준</h2>
                         <h3>fullstack</h3>
-                        <p>중간지점 서비스 개발</p>
+                        <p>길찾기, 중간지점 서비스 개발</p>
                     </div>
                 </div>
             </div>
