--- a/views/__Halfway.ejs
+++ b/views/__Halfway.ejs
@@ -14,7 +14,7 @@
             <div class="con-search">
                 <img class="searchIcon" src="searchIcon.svg" alt="" />
                 <input class="search-input post_input_data" autocomplete="none" type="text" id="textInput" class="form-control" name="address" placeholder="지점 1" />
-                <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" />
+                <img id="reset-button" class="xMark xMark_event" src="xMark.svg" alt="지우기" />
             </div>
             <button id="mid_btn" class="search-btn" type="button">찾기</button>
         </header>
@@ -22,7 +22,7 @@
             <div class="con-search way">
                 <img class="searchIcon" src="searchIcon.svg" alt="" />
                 <input class="search-input post_input_data" autocomplete="none" type="text" id="textInput" class="form-control" name="address" placeholder="지점 2" />
-                <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" />
+                <img id="reset-button" class="xMark xMark_event" src="xMark.svg" alt="지우기" />
             </div>
             <button id="" class="remove-btn remove-address" type="button">삭제</button>
         </div>
