--- a/static/css/Explanation.css
+++ b/static/css/Explanation.css
@@ -3,7 +3,7 @@
 }
 
 .close_panel {
-    z-index: 3;
+    z-index: 4;
     position: absolute;
     height: 100vh;
     width: 100vw;
@@ -13,7 +13,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 3;
     height: 100vh;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.5);
@@ -43,17 +43,30 @@
     left: 50%;
     text-align: center;
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
-    z-index: 4;
+    z-index: 5;
 }
 
 .ex_cont > div {
-    width: 90%;
+    font-family: "GmarketSansMedium", sans-serif;
+    width: 80%;
     margin: 0 auto;
+}
+
+.ex_cont > div > h1 {
+    font-weight: 700;
+    text-shadow: 3px 3px 5px rgb(165, 165, 165);
+}
+
+.ex_cont > div > p {
+    font-size: large;
+}
+.ex_cont > div > p > span {
+    font-size: 20px;
 }
 
 .help_select {
     animation: blink 1s infinite alternate;
-    z-index: 100;
+    z-index: 4;
     position: relative;
 }
 
@@ -106,7 +119,7 @@
 /* #region x버튼 */
 .ex_X-btn {
     position: relative;
-    z-index: 4;
+    z-index: 5;
 }
 
 .ex_X-btn > div {
