--- a/views/Main.ejs
+++ b/views/Main.ejs
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="help.css" />
         <link rel="stylesheet" href="explanation.css" />
         <link rel="stylesheet" href="Subway.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsmoFLqupsLIZtJGrerrEuNkrnW_8NnCI&libraries=places"></script>
         <title>SKHU ROAD</title>
     </head>
