--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -12,21 +12,22 @@
             <div style="text-align: left; padding: 10px 22px">
                 <form style="display: inline-block" method="post">
                     <select class="Line_no" id="SubwayLine" style="font-size: 20px" name="subwayLine">
-                        <option value="1호선">1호선</option>
-                        <option value="2호선">2호선</option>
-                        <option value="3호선">3호선</option>
-                        <option value="4호선">4호선</option>
-                        <option value="5호선">5호선</option>
-                        <option value="6호선">6호선</option>
-                        <option value="7호선">7호선</option>
-                        <option value="8호선">8호선</option>
-                        <option value="9호선">9호선</option>
-                        <option value="경의중앙선">경의중앙선</option>
-                        <option value="경춘선">경춘선</option>
-                        <option value="수인분당선">수인분당선</option>
-                        <option value="서해선">서해선</option>
-                        <option value="신분당선">신분당선</option>
-                        <option value="우이신설선">우이신설선</option>
+                        <option style="background-color: #0052A4; color: white;" value="1호선">1호선</option>
+                        <option style="background-color: #00A84D; color: white;" value="2호선">2호선</option>
+                        <option style="background-color: #EF7C1C; color: white;" value="3호선">3호선</option>
+                        <option style="background-color: #00A4E3; color: white;" value="4호선">4호선</option>
+                        <option style="background-color: #996CAC; color: white;" value="5호선">5호선</option>
+                        <option style="background-color: #CD7C2F; color: white;" value="6호선">6호선</option>
+                        <option style="background-color: #747F00; color: white;" value="7호선">7호선</option>
+                        <option style="background-color: #E6186C; color: white;" value="8호선">8호선</option>
+                        <option style="background-color: #BDB092; color: white;" value="9호선">9호선</option>
+                        <option style="background-color: #77C4A3; color: white;" value="경의중앙선">경의중앙선</option>
+                        <option style="background-color: #178C72; color: white;" value="경춘선">경춘선</option>
+                        <option style="background-color: #0090D2; color: white;" value="수인분당선">공항철도</option>
+                        <option style="background-color: #FABE00; color: white;" value="수인분당선">수인분당선</option>
+                        <option style="background-color: #8FC31F; color: white;" value="서해선">서해선</option>
+                        <option style="background-color: #D31145; color: white;" value="신분당선">신분당선</option>
+                        <option style="background-color: #B7C450; color: white;" value="우이신설선">우이신설선</option>
                     </select>
                 </form>
                 <form style="display: inline-block">
