--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -23,7 +23,7 @@
                         <option style="background-color: #BDB092; color: white;" value="9호선">9호선</option>
                         <option style="background-color: #77C4A3; color: white;" value="경의중앙선">경의중앙선</option>
                         <option style="background-color: #178C72; color: white;" value="경춘선">경춘선</option>
-                        <option style="background-color: #0090D2; color: white;" value="수인분당선">공항철도</option>
+                        <option style="background-color: #0090D2; color: white;" value="공항철도">공항철도</option>
                         <option style="background-color: #FABE00; color: white;" value="수인분당선">수인분당선</option>
                         <option style="background-color: #8FC31F; color: white;" value="서해선">서해선</option>
                         <option style="background-color: #D31145; color: white;" value="신분당선">신분당선</option>
