css js subway관련 수정

--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -48,7 +48,10 @@
             </div>
             <div id="ringthcon" class=""></div>
         </div>
-        <div class="subway_text_group"></div>
+        <div class="subway_text_group">
+        </div>
+        
+        
     </div>
     <br />
 </main>
