중간지점 기능 추가 및 로직 수정
1. 중간지점 찾기 로직을 수정 (근처 장소 없으면 근사치 재검색)
2. 중간지점 공지 메시지 서비스를 추가
3. 중간지점 삭제, +, 검색버튼 재배치
4. 지하철 지연정보 X안되던 버그 수정

--- a/static/css/Halfway.css
+++ b/static/css/Halfway.css
@@ -73,3 +73,20 @@ input[type="range"]::-webkit-slider-thumb {
     border: 2px solid rgb(49, 162, 255);
     box-shadow: -10007px 0 0 10000px rgb(49, 162, 255);
 }
+
+.inform input {
+    display: block;
+    margin-bottom: 20px;
+    border: 1px solid #e5e9f5;
+    background-color: #f6f7fa;
+    padding: 20px;
+    margin-top: 10px;
+    margin: 0 auto;
+    border-radius: 10px;
+    width: 30%;
+}
+
+.inform label {
+    color: #7369ab;
+    text-align: center;
+}
