--- a/views/__Subway.ejs
+++ b/views/__Subway.ejs
@@ -4,7 +4,7 @@
             <div class="con-search">
                 <img class="searchIcon" src="searchIcon.svg" alt="" />
                 <input class="search-input" autocomplete="off" id="station" type="text" class="form-control" placeholder="역 검색" />
-                <img id="reset-button" class="xMark" src="xMark.svg" alt="지우기" type="reset" />
+                <img id="subway_reset-button" class="xMark" src="xMark.svg" alt="지우기" type="reset" />
             </div>
             <button id="btn" class="search-btn" type="submit">검색</button>
         </div>
