--- a/views/__Explanation.ejs
+++ b/views/__Explanation.ejs
@@ -11,12 +11,8 @@
     </div>
     <div class="ex_cont">
         <div>
-            <h2 id="ex_title">SKHU ROAD</h2>
-            <p id="ex_maintext">
-                길찾기: 검색한 장소로 이동할 수 있는 수단을 보여줍니다.<br />
-                중간지점: 검색한 두 장소의 중간지점을 찾아줍니다.<br />
-                지하철: 지하철 역의 지연시간을 알려줍니다.
-            </p>
+            <h1 id="ex_title">SKHU ROAD</h1>
+            <p id="ex_maintext"></p>
         </div>
         <div class="btn_group">
             <div id="ex_back_btn" class="ex_button"><< Back</div>
@@ -24,4 +20,4 @@
         </div>
     </div>
 </div>
-<script src="Explanation.js"></script>
+<script src="js_Explanation.js"></script>
