최근 검색 기록 오류 수정
최근 검색기록 디자인 및 오류 수정

--- a/views/__Mapping.ejs
+++ b/views/__Mapping.ejs
@@ -17,6 +17,10 @@
         </div>
         <button id="btn" class="search-btn" type="button">검색</button>
     </header>
-    <div id="form_control_text"><div></div></div>
+    <div id="form_control_text">
+        <br />
+        <h2>최근 검색기록</h2>
+        <ol class="form_control_ol"></ol>
+    </div>
 </main>
 <script src="Mapping.js"></script>
