--- a/static/css/Main.css
+++ b/static/css/Main.css
@@ -209,6 +209,30 @@ input[type="radio"] {
     border-radius: 10px;
     box-shadow: inset 0px 0px 5px white;
 }
+
+.mapping-section {
+    height: 76%;
+}
+
+.con-main {
+    height: 100%;
+    overflow: auto;
+}
+.con-main::-webkit-scrollbar {
+    width: 7px;
+}
+.con-main::-webkit-scrollbar-thumb {
+    background-color: #50555e;
+    border-radius: 10px;
+    background-clip: padding-box;
+    border: 1px solid transparent;
+}
+.con-main::-webkit-scrollbar-track {
+    background-color: rgb(179, 179, 179);
+    border-radius: 10px;
+    box-shadow: inset 0px 0px 5px white;
+}
+
 /* 사이드바 스크롤 설정 */
 
 .on {
@@ -794,3 +818,29 @@ button.midRediscover:hover {
     display: none;
 }
 /* 중간지점 공지생성 */
+
+/* 길찾기 최근 검색 기록 */
+
+/* #region 최근 검색 기록  */
+
+#form_control_text > ol {
+    margin: 10px;
+    padding: 0px;
+    list-style-type: none;
+}
+#form_control_text > ol > li {
+    background-color: #edf6ff;
+    color: #6c757d;
+    font-size: 18px;
+    border: none;
+    padding: 10px 15px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    box-shadow: 0px 2px 5px rgba(78, 78, 78, 0.2);
+    border-radius: 5px;
+    width: 80%;
+    margin: 20px auto;
+}
+
+/* #endregion 최근 검색 기록  */
+/* 길찾기 최근 검색 기록 */
